# satellite_products

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: rust.yml
src/: App.vue  main.js
src/assets/loaders/: OBJLoader.js
src/assets/photos/: photo.json  three_mmi.js
src/components/: Space.vue  Viewer.vue  slider.js  store.js
src/components/satellites/: satell.js  satellite.js  tle.js
zonaris-back/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  compose.yaml
zonaris-back/migrations/2023-11-04-182058_add_satellite/: down.sql  up.sql
zonaris-back/migrations/2023-11-04-184342_add_satellite_data/: down.sql  up.sql
zonaris-back/src/: main.rs  repository.rs  routes.rs  schema.rs
zonaris-back/src/controller/: instrument_data.rs  mod.rs  satellite.rs  satellite_data.rs  utils.rs
zonaris-back/src/dto/: instrument_data.rs  mod.rs  satellite.rs  satellite_data.rs
zonaris-back/src/model/: mod.rs  satellite.rs  satellite_data.rs
zonaris-back/src/persistence/: mod.rs  repository.rs
zonaris-back/src/persistence/model/: instrument.rs  instrument_data.rs  mod.rs  oceancolor.rs  satellite.rs  satellite_data.rs  satellite_instrument.rs
zonaris-back/src/persistence/postgres/: migration.rs  mod.rs  repository.rs
zonaris-back/src/persistence/postgres/table-macro/: Cargo.toml
zonaris-back/src/persistence/postgres/table-macro-tests/: Cargo.toml
zonaris-back/src/persistence/postgres/table-macro-tests/src/: lib.rs
zonaris-back/src/persistence/postgres/table-macro-tests/src/tests/: property.rs
zonaris-back/src/persistence/postgres/table-macro/src/: lib.rs  property.rs  table.rs  utils.rs
zonaris-back/src/service/: celestrak.rs  instrument_data.rs  job.rs  mod.rs  oceancolor.rs  satellite.rs  satellite_data.rs
zonaris-back/src/service/tests/: allow_cross_origin.rs  mod.rs
zonaris-back/src/utils/: geophysical_data.rs  mod.rs  struct_utils.rs
zonaris-front/: README.md  package-lock.json  package.json
zonaris-front/src/: App.tsx  main.js
zonaris-front/src/api/: instrument-data.api.ts  satellite.api.ts
zonaris-front/src/components/: HelloWorld.vue  SatelliteList.tsx
