[package]
name = "zonaris"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
serde = { version = "1.0.188", features = ["derive"] }
dotenv = "0.15.0"
netcdf = { git = "https://github.com/georust/netcdf.git", features = ["static"] }
image = "0.24.7"
reqwest = { git = "https://github.com/Unkorunk/reqwest.git", features = ["cookies"] }
env_logger = "0.10.0"
tempfile = "3.8.1"
chrono = "0.4.31"
futures = "0.3.29"
tokio-cron-scheduler = "0.9.4"
log = "0.4.20"
async-trait = "0.1.74"

# Utils
itertools = "0.12.0"

# Swagger
utoipa = { version = "4.1.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }

# ORM
diesel = { version = "2.1.1", optional = true }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"], optional = true }
deadpool = { version = "0.9.5", optional = true }

[features]
diesel = ["dep:diesel", "dep:diesel-async", "dep:deadpool"]